[GTK][Minibrowser] Escape key does not hide the search box https://bugs.webkit.org/show_bug.cgi?id=137734

Patch by Tanay C <tanay.c@samsung.com> on 2014-10-20
Reviewed by Philippe Normand.

* MiniBrowser/gtk/BrowserWindow.c: Added the check to handle search box hide
(stopPageLoad): Modified.

Canonical link: https://commits.webkit.org/155730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174879 268f45cc-cd09-0410-ab3c-d52691b4dbfc